app/assets/_scss/component/_badges.scss
/* Left Column
 * -----------------------------------------------------------------------------*/
#badges-left {
  @include span-columns(3 of 10);
}
#badges-recent-box{
  h3 {
    display: inline-block;
  }
}
.view-more {
  @include transition(opacity 0.25s ease-in-out);
  float: right;
  margin-top: 5px;
  color: $accent-color;
  font-size: $small-font-size;
  cursor: pointer;
  &:hover {
    opacity: 0.8;
  }
}

/* Center Column
 * -----------------------------------------------------------------------------*/
#badges-center {
  @include span-columns(3 of 10);
}
#badges-upcoming-box {
  h3 {
    display: inline-block;
  }
  .box-row {
    &:first-child {
      .progress-bar {
        width: 200px;
      }
    }
    &:nth-child(2) {
      .progress-bar {
        width: 130px;
      }
    }
    &:nth-child(3) {
      .progress-bar {
        width: 70px;
      }
    }
  }
}


/* Right Column
 * -----------------------------------------------------------------------------*/
#badges-right {
  @include span-columns(4 of 10);
  .box { margin-right: 0; }
}
#badges-all-box {
  h3 {
    display: inline-block;
  }
  .box-row {
    &:nth-child(2) {
      .progress-bar {
        width: 100px;
      }
    }
    &:nth-child(3) {
      .progress-bar {
        width: 50px;
      }
    }
  }
}

